hercules: Add core drivers required for booting.
This commit adds the TI Hercules core drivers that are required for
the system to boot.

Signed-off-by: Stephanos Ioannidis <root@stephanos.io>

--- a/hercules/hal/CMakeLists.txt
+++ b/hercules/hal/CMakeLists.txt
@@ -4,6 +4,16 @@ if(CONFIG_HAS_HERCULES_HAL)
 zephyr_include_directories(.)
 
 # Add sources
-#zephyr_sources()
+zephyr_sources(source/errata_SSWF021_45.c)
+zephyr_sources(source/esm.c)
+zephyr_sources(source/gio.c)
+zephyr_sources(source/notification.c)
+zephyr_sources(source/pinmux.c)
+zephyr_sources(source/sci.c)
+zephyr_sources(source/sys_core.s)
+zephyr_sources(source/sys_selftest.c)
+zephyr_sources(source/sys_startup.c)
+zephyr_sources(source/sys_vim.c)
+zephyr_sources(source/system.c)
 
 endif()
