hercules: Add RTI driver for system timer.
This commit adds the Real-Time Interrupt (RTI) hardware module driver
for system timer operation.

Signed-off-by: Stephanos Ioannidis <root@stephanos.io>

--- a/hercules/hal/CMakeLists.txt
+++ b/hercules/hal/CMakeLists.txt
@@ -9,6 +9,7 @@ zephyr_sources(source/esm.c)
 zephyr_sources(source/gio.c)
 zephyr_sources(source/notification.c)
 zephyr_sources(source/pinmux.c)
+zephyr_sources(source/rti.c)
 zephyr_sources(source/sci.c)
 zephyr_sources(source/sys_core.s)
 zephyr_sources(source/sys_selftest.c)
